# ChangeLog for dev-games/flatzebra
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/flatzebra/ChangeLog,v 1.31 2013/01/31 00:18:30 mr_bones_ Exp $

  31 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> -flatzebra-0.1.5.ebuild:
  old

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> flatzebra-0.1.6.ebuild:
  x86 stable wrt bug #436912

  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> flatzebra-0.1.6.ebuild:
  stable ppc, bug #436912

  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> flatzebra-0.1.6.ebuild:
  Stable for amd64, wrt bug #436912

*flatzebra-0.1.6 (06 Aug 2012)

  06 Aug 2012; Michael Sterrett <mr_bones_@gentoo.org> +flatzebra-0.1.6.ebuild:
  version bump

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> flatzebra-0.1.5.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  16 Jan 2011; Michael Sterrett <mr_bones_@gentoo.org>
  flatzebra-0.1.5.ebuild:
  add static-libs support

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> flatzebra-0.1.5.ebuild:
  Marked ppc stable for bug #325135.

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  flatzebra-0.1.5.ebuild:
  stable x86, bug 325135

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> flatzebra-0.1.5.ebuild:
  stable amd64, bug 325135

  21 May 2010; Pacho Ramos <pacho@gentoo.org> flatzebra-0.1.4.ebuild:
  stable amd64, bug 318891

  20 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  flatzebra-0.1.4.ebuild:
  x86 stable wrt bug #318891

*flatzebra-0.1.5 (17 May 2010)

  17 May 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +flatzebra-0.1.5.ebuild:
  version bump

  09 May 2010; Raúl Porcel <armin76@gentoo.org> flatzebra-0.1.3.ebuild,
  flatzebra-0.1.4.ebuild:
  Drop sparc keyword

*flatzebra-0.1.4 (06 Apr 2010)

  06 Apr 2010; Tristan Heaven <nyhm@gentoo.org> +flatzebra-0.1.4.ebuild:
  Version bump

  11 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> flatzebra-0.1.3.ebuild:
  Stable for ppc, bug 284947
