@@ -1,4 +1,4 @@
 DIST flatzebra-0.1.6.tar.gz 359098 SHA256 4e7bb0a77136ec3b81e0f73c1d08e828d38ef011095d5ce7068a94f3bb21d67a SHA512 500df95ee23bd2decf1e11be76725733d9219ef06a844f2de337fc11494eeea57e5ab6298cb4235c394216dd75bfb64a4e9f732362ca5ee95c43086b2ca38f75 WHIRLPOOL 96d058b434c08e69a05d9ee1576629361134e9edda32e15ffa80c640aa03675360a03838f1f339b77f50b3c2e423a28bbe7fa19925568da377dd42016f4c4e62
-EBUILD flatzebra-0.1.6.ebuild 1043 SHA256 9bbb644f262f85eb1c03d4d16716f635e2ba6dcd876faeb54239aa2fdd4f9420 SHA512 a07fcef8c8829f1dcc635f79fa26712097019f6e731bdc3ded30e7b313bcad8e231486539e34e900de2f367aa151b30a750e0b6e7abea915f59a8eb5147cb22f WHIRLPOOL 9ff4613d6149ee0a9478c4f028cf133eae0145e74496f8d4758cf12f8449621db11184d9559f8eb37e64428485a0ccc36cc31b40e5597012a92410b25c5b1e60
-MISC ChangeLog 3787 SHA256 c786197f31b109705450dfdbe2fe999d30041a03bfd114fa32b9ec77f1b2633f SHA512 aa773072244cc09b461a9c2e1897e1022c76f2cde83387412f32f8e1a4cfb0240478539ca54f662fa101c3255272c9992294f4a4204d2be37b38c6e2d37f5a82 WHIRLPOOL 3fe143c083ae47f3a02eec1325f809882b2f5c339b2cee023db830f5a9bca2bc3d9bf5b62b98b39fb2669d7b737b2df5cf52c91967c4cb6878cfd07f00035a9b
+EBUILD flatzebra-0.1.6.ebuild 838 SHA256 4e6ca284fb083824ba2cf4a16756c6d53c4a6b6e898d0df65b2c4aab41790360 SHA512 beea2eca573ef19283f4ce8789e118b21e3397e7ab8a5a3cbfd06bf60c1bf9bfff08307f6112c7d77765dada74d22a194edb3af4c0d1787de7c1e5473ba9f704 WHIRLPOOL ba74d427356d42a188ec2c6070d1e5de2f7caccfc213e67fc2740c39c51114c84dcb3955cef2e8a63c6a69bdc9116ffeded3a61986f7e84ddc23e6bce36a9bc7
+MISC ChangeLog 3876 SHA256 45bf20060f62d7e4d5cdf7e9fa51916ffd0514d7800e51e447ea7d8af8157015 SHA512 6267d4a9262fbb13c198af98c93a1af6deefcef72c822ae415a5d008bfa319fb3d43689ed843948ef2d2cc06981c3f0a5da621b7ebfa7dcec0d8fcb44a4c6c84 WHIRLPOOL 27a7080b06874fbad8d3f5dc8a298ba91d65f41b0b50be366db902c3234f29986734bbe8581364119956d82da92baa50eb7199c9606f3f32d6b117ff37d406db
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
