@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/flatzebra
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/flatzebra/ChangeLog,v 1.31 2013/01/31 00:18:30 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-games/flatzebra/ChangeLog,v 1.32 2015/02/04 22:52:13 mr_bones_ Exp $
+
+  04 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> flatzebra-0.1.6.ebuild:
+  EAPI=5
 
   31 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> -flatzebra-0.1.5.ebuild:
   old
